# SuperconductivityClass_gnuplotScripts_ExperimentalDataAnalysis

./: README.md  super_analysis.py
Dados_TP2/: curie.gp
Dados_TP3/: dimer_fit.gnplt  fit.gn
