# Define the data file
datafile = 'T_Xm_X__CuAc.txt'

# Define the Curie-Weiss fitting function
#f(x) = 1/(((0.75*(g**2))/(x*(3+exp(-J/x)))) + a + (b/(x-c)))    # to fit to 1/X
f(x) = ((0.75*(g**2))/(x*(3+exp(-J/x)))) + a + (b/(x-c))    # to fit to X

# Provide initial guesses for the parameters
a = -1E-5
J = -400
g = 2.195
b = 0.001
c = -15

# Perform the fit
fit f(x) datafile u 1:3 via g, J, a, b, c

# Print the values of the parameters
print sprintf("g = %g +/- %g, J = %g +/- %g, a = %g +/- %g, b = %g +/- %g, c = %g +/- %g", g, g_err, J, J_err, a, a_err, b, b_err, c, c_err)

# Plot the data and the fitted function
set title "X_{molar} vs Temperature"
set xlabel "Temperature (K)"
set ylabel "X_{molar}"
plot datafile u 1:3 with points title 'Data', f(x) with lines title 'Fit'

# Wait for user to close the interactive plot
pause -1 "Hit any key to continue"

# Save the plot to a file
set terminal png
set output 'fit_plot.png'
plot datafile u 1:3 with points title 'Data', f(x) with lines title 'Fit'
set output
